--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -99,3 +99,24 @@ body {
 .cyan {
   background-color: #cfe3f7;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(rgb(245, 0, 143), rgb(112, 0, 192));
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(rgb(214, 0, 125), rgb(96, 1, 163));
+}
